metric/federate/insecure/insecure-eks-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: cpe-monitoring-system
  name: insecure-prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: prometheus-nodeport
            servicePort: 9090
          path: /
